<!--  
Modified by :
Pierre GALERNEAU for Cuisinix (www.cuisinix.fr)
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_accounts_option"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="0dip" >

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/reply"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_reply"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/reply_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/reply_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_reply_all"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/reply_all_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/forward"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_forward_mail"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/forward_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/mark_as_unread"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_mark"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/mark_as_unread_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_delete"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/delete_action"
                android:textStyle="bold" />
            
            <Button
                android:id="@+id/more_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_more"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/more_action"
                android:textStyle="bold" />
 
            <Button
                android:id="@+id/flag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_forward_mail"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/flag_action"
                android:textStyle="bold"
                android:visibility="gone" />

            <Button
                android:id="@+id/archive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/archive_action"
                android:textStyle="bold" 
                android:visibility="gone"/>

            <Button
                android:id="@+id/spam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/spam_action"
                android:textStyle="bold" 
                android:visibility="gone"/>

            <Button
                android:id="@+id/move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/move_action"
                android:textStyle="bold" 
                android:visibility="gone"/>

            <Button
                android:id="@+id/copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/copy_action"
                android:textStyle="bold" 
                android:visibility="gone"/>

            <Button
                android:id="@+id/select_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/select_text_action"
                android:textStyle="bold" 
                android:visibility="gone"/>
                
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>