<!--  
Modified by :
Pierre GALERNEAU for Cuisinix (www.cuisinix.fr)
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_accounts_option"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="0dip" >

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/compose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_compose"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/compose_title"
                android:textStyle="bold" />
 
            <Button
                android:id="@+id/show_folders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_show_folders"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/folder_list_display_mode_label"
                android:textStyle="bold" />
<!-- 
            <Button
                android:id="@+id/empty_trash"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_delete"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/empty_trash_action"
                android:textStyle="bold" />
-->
            <Button
                android:id="@+id/accounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_account_list"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/accounts_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/check_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_refresh"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/check_mail_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@android:drawable/ic_menu_preferences"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/preferences_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/send_messages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_refresh"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/send_messages_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/advanced"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:minWidth="@dimen/button_minWidth"
                android:text="@string/advanced"
                android:textStyle="bold" />
        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>