<!--  
Modified by :
Pierre GALERNEAU for Cuisinix (www.cuisinix.fr)
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_accounts_option"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:background="@android:color/white"
    android:orientation="horizontal"
    android:padding="0dip" >

    <HorizontalScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/compose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_compose"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/compose_title"
                android:textStyle="bold" />

            <Button
                android:id="@+id/set_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_set_sort"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/sort_by"
                android:textStyle="bold" />

            <Button
                android:id="@+id/accounts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_account_list"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/accounts_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/check_mail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_refresh"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/check_mail_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/list_folders"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_navigate"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/list_folders_action"
                android:textStyle="bold" />

            <Button
                android:id="@+id/more_options"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@android:color/transparent"
                android:drawableLeft="@drawable/ic_menu_more"
                android:minWidth="@dimen/button_minWidth"
                android:paddingLeft="1dp"
                android:text="@string/more_action"
                android:textStyle="bold" />

        </LinearLayout>
    </HorizontalScrollView>

</LinearLayout>